<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <item
        android:id="@+id/action_notifications"
        android:icon="@drawable/notifications_bar"
        app:showAsAction="always"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        android:title="@string/action_notifications"
        android:orderInCategory="1"
        />

    <item
        android:id="@+id/action_categories"
        android:icon="@drawable/search_bar"
        app:showAsAction="always"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        android:title="@string/action_search"
        android:orderInCategory="2"
        />

    <item
        android:id="@+id/action_user"
        android:icon="@drawable/user_bar"
        app:showAsAction="always"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        android:title="@string/action_myprofile"
        android:orderInCategory="3"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_sign_out"
        android:title="@string/action_sign_out"
        app:showAsAction="never"/>


</menu>
