<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.nansoft.find3r.activity.LoginActivity"
    android:background="@drawable/login">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_alignParentBottom="true" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18dp"/>

        <Button
            style="@style/btnLogin"
            android:id="@+id/btnFacebook"
            android:padding="10dp"
            android:layout_margin="4dp"
            android:text="@string/loginFacebook" />

        <Button
            style="@style/btnLogin"
            android:id="@+id/btnRegistrarse"
            android:text="@string/loginRegistrarse" />

    </LinearLayout>



</RelativeLayout>
