<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alternative_background"
    tools:context="com.nansoft.find3r.activity.AgregarNoticia">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            style="@style/stlLetrasIndicacion"
            android:text="@string/lblNombre"/>

        <EditText
            style="@style/stlEditText"
            android:id="@+id/edtNombreNoticia"
            android:lines="10"
            android:minLines="1"
            android:gravity="top|left"
            android:maxLines="1" />

        <TextView
            style="@style/stlLetrasIndicacion"
            android:text="@string/lblDescription"/>

        <EditText
            style="@style/stlEditText"
            android:id="@+id/edtDescripion"
            android:minLines="4"
            android:gravity="top|left"
            android:maxLines="10"
            android:scrollbars="vertical" />

        <TextView
            style="@style/stlLetrasIndicacion"
            android:text="@string/lblimage"/>


        <ImageView
            android:id="@+id/imgvNoticiaPreview"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:onClick="onClick"
            android:maxHeight="150dp"
            android:maxWidth="150dp"
            android:layout_gravity="center"
            android:src="@drawable/emptyimage"/>


        <TextView
            style="@style/stlLetrasIndicacion"
            android:text="@string/lblProvincia" />

        <com.weiwangcn.betterspinner.library.BetterSpinner
            android:id="@+id/spnrProvincias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/insLocalizacion" />

        <TextView
            style="@style/stlLetrasIndicacion"
            android:text="Seleccione la fecha y hora" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fecha"
                android:layout_weight="1"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hora"
                android:layout_weight="1"
                android:gravity="center_horizontal" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <Button
                android:id="@+id/btnFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fecha"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnHora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hora"
                android:layout_weight="1"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                android:id="@+id/txtvInfoFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fecha"
                android:layout_weight="1"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/txtvInfoHora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hora"
                android:layout_weight="1"
                android:gravity="center_horizontal" />


        </LinearLayout>

        <TextView
            style="@style/stlLetrasIndicacion"
            android:text="@string/lblTipoReporte"/>


        <com.weiwangcn.betterspinner.library.BetterSpinner
            android:id="@+id/spnrTipoReporte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="Auto, Mascota, entre otros..." />



        <Button
            android:id="@+id/btnAgregarReporte"
            style="@style/stlBotonClick"
            android:text="@string/sendReport"/>

    </LinearLayout>
</ScrollView>
