<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/white"
        android:padding="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

        <ImageView
            android:id="@+id/imgvNoticia"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/txtvNombreUsuarioNoticia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/imgvNoticia"
                android:textColor="@color/anaranjado"
                android:text="@string/name"
                android:textStyle="bold" />





            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtvFechaNoticia"
                android:layout_gravity="right"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp"
                android:textColor="@color/cafeoscuro"
                android:text="Hace 2 horas"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_weight="1"
                android:layout_marginTop="110dp"
                android:layout_marginBottom="15dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                >

                <ImageView
                    android:id="@+id/imgvEstado"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/lost"/>


                <TextView
                    android:id="@+id/txtvEstado"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/lost"
                    android:textColor="@color/cafeoscuro"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_marginLeft="10dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">
                
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/support"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_marginLeft="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:text="@string/ayudar"
                    android:textColor="@color/cafeoscuro"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_marginLeft="10dp" />

            </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>